[gd_scene load_steps=2 format=3 uid="uid://cg4c48j5w31ij"]

[ext_resource type="Script" uid="uid://c6ahtgaoidyjo" path="res://Interface/GlobalInterface/UnitList.gd" id="1_krmi3"]

[node name="UnitList" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_krmi3")

[node name="ListTitle" type="Label" parent="."]
layout_mode = 2
text = "Unit List"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ListItems" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
